--- a/index.html
+++ b/index.html
@@ -1,57 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Rockit! Test page</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Система</title>
+<link href="img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+<meta name="keywords" content="Монтаж систем связи. Электрика. СКС. Видеонаблюдение. СКУД. ОПС." />
+<meta name="description" content="Монтаж систем связи. Электрика. СКС. Видеонаблюдение. СКУД. ОПС." />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+<link rel="stylesheet" type="text/css" href="/css/styles1.css">
+</head>
+<body>
+<p></p>
+<div class="container">
+<div class="content">
+<img class="logo" src="img/emblem_systema.png" width="200" height="200">
+<br>
+<font color="#191818" line-height="20px" >Монтаж систем связи <font color="#969292">/</font> Электрика <font color="#969292">/</font> СКС <font color="#969292">/</font> Видеонаблюдение <font color="#969292">/</font> СКУД <font color="#969292">/</font> ОПС
+</font>
+<br><br>
+<font color="#544d4d" line-height="20px" >ООО Система
+<br>Хабаровск, ул. Гагарина, 37 офис 16
+<br>Тел.: +7 924 200 5906
+</font>
+<p>
+<a href="https://www.instagram.com/system.khv/"><img src="img/inst_1.png" width="120"></a><br>
+</p>
+<font color="#747373">- <?php echo date('Y'); ?> -</font>
+<!-- end .content --></div>
+<!-- end .footer --></div>
+<!-- end .container --></body>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter50596558 = new Ya.Metrika2({
+                    id:50596558,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true
+                });
+            } catch(e) { }
+        });
 
-    <meta name="description" content="Rockit! Promosite">
-    <meta name="author" content="LayoutIt!">
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-<!-- Chatra {literal} -->
-<script>
-    (function(d, w, c) {
-        w.ChatraID = 'iozxzApRnmLJHWSNp';
-        var s = d.createElement('script');
-        w[c] = w[c] || function() {
-            (w[c].q = w[c].q || []).push(arguments);
-        };
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
         s.async = true;
-        s.src = (d.location.protocol === 'https:' ? 'https:': 'http:')
-        + '//call.chatra.io/chatra.js';
-        if (d.head) d.head.appendChild(s);
-    })(document, window, 'Chatra');
+        s.src = "https://mc.yandex.ru/metrika/tag.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks2");
 </script>
-<!-- /Chatra {/literal} -->
-  </head>
-  <body>
-
-    <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="page-header">
-				<h1>
-					Rockit!
-				</h1>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<div class="progress">
-						<div class="progress-bar w-75 progress-bar-striped progress-bar-animated">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+<noscript><div><img src="https://mc.yandex.ru/watch/50596558" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+<!-- BEGIN JIVOSITE CODE {literal} -->
+<script type='text/javascript'>
+(function(){ var widget_id = 'Ko2RamMmbH';var d=document;var w=window;function l(){
+var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
+        <!-- {/literal} END JIVOSITE CODE -->
 </html>
